antonio_ramos/session-01/exercise-01/wordpress-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wordpress-deployment
  namespace: exercise-01
  labels:
    app: wordpress
    tier: frontend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      containers:
      - name: wordpress
        image: bitnami/wordpress:latest    		
        ports:
          - name: wordpress
            containerPort: 80
