antonio_ramos/session-01/exercise-01/wordpress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-svc
  namespace: exercise-01
  labels:
    app: wordpress
    tier: frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: wordpress
    tier: frontend
